# polars-nlq

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/polars_nlq/: __init__.py  definitions.py  engine.py  nlq.py
tests/: test_nlq.py
