[project]
name = "polars-nlq"
version = "0.1.0"
description = "Natural language to typed Polars query plans"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor>=1.14.5",
    "pydantic>=2.11.9",
    "polars>=1.38.1",
]

[project.urls]
Repository = "https://github.com/undo-git-pull/polars-nlq"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
